Add Java 1.5 features to bootImageWriter including generics and new 'for' loop constructs